<resources>
    <string name="app_name">vanjel</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_registration_status">RegistrationStatusActivity</string>
    <string name="input_email_error">email required</string>
    <string name="input_first_name_error">first name required</string>
    <string name="input_last_name_error">last name required</string>
    <string name="input_street_name_error">street name required</string>
    <string name="input_street_number_error">street number required</string>
    <string name="input_city_name_error">city name required</string>
    <string name="input_password_error">password required</string>
    <string name="input_password_conf_error">password confirmation required</string>
    <string name="input_password_matching_error">passwords must be the same</string>
    <string name="input_country_error">country required</string>
    <string name="title_activity_profile">Profile</string>
    <string name="your_profile">Your profile</string>
    <string name="general_informations">General information</string>
    <string name="medical_condition">Do you suffer from any medical condition ?</string>
    <string name="previous_surgeries">Have you ever had surgery ? Please list which surgeries and what year (or years if more than 1)</string>
    <string name="allergies">Do you have any allergies ? Please specify which</string>
    <string name="drug_reaction">Did you ever have a strong reaction, allergic or otherwise, to a drug ? Please write the drug and the reaction</string>
    <string name="current_medication">Are you currently taking medication ? Please write down what medication,the individual dosage and how many times the drug is taken per day</string>
    <string name="drug">Drug</string>
    <string name="dosage">Dosage</string>
    <string name="times_per_day">Times per day</string>
    <string name="add">add</string>
    <string name="cig_per_day">How many cigarettes do you consume on average per day?</string>
    <string name="drinks_per_day">How many drinks do you consume on average per day?</string>
    <string name="exercise_per_week">How many hours of physical exercise do you do per week ?</string>
    <string name="other_substances">Do you consume any other substances (recreationnal drugs, alternative medicines,..) ?</string>
    <string name="save_your_informations">Save your informations</string>
    <string name="year">Year(s)</string>
    <string name="reaction">Reaction</string>
    <string name="input_birthday_error">birthday required</string>
    <string name="login_failed_error">Login failed for unknown reason</string>
    <string name="database_error">Error with database.</string>
    <string name="oklm">oklm un test deux test</string>
    <string name="title_activity_search_doctor">SearchDoctor</string>
    <string name="title_activity_patient_appointment">PatientAppointmentActivity</string>
    <string name="doc_availabilities">Set your general weekly availabilities</string>
    <string name="valid">Valid</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="eight">8:00</string>
    <string name="eight_thirty">8:30</string>
    <string name="nine">9:00</string>
    <string name="nine_thirty">9:30</string>
    <string name="ten">10:00</string>
    <string name="ten_thirty">10:30</string>
    <string name="eleven">11:00</string>
    <string name="eleven_thirty">11:30</string>
    <string name="twelve">12:00</string>
    <string name="twelve_thirty">12:30</string>
    <string name="thirteen">13:00</string>
    <string name="thirteen_thirty">13:30</string>
    <string name="fourteen">14:00</string>
    <string name="fourteen_thirty">14:30</string>
    <string name="fifteen">15:00</string>
    <string name="fifteen_thirty">15:30</string>
    <string name="sixteen">16:00</string>
    <string name="sixteen_thirty">16:30</string>
    <string name="seventeen">17:00</string>
    <string name="seventeen_thirty">17:30</string>
    <string name="eighteen">18:00</string>
    <string name="eighteen_thirty">18:30</string>
    <string name="permission_denied_rationale_short">We need access to your Location to display nearby doctors</string>
    <string name="permission_denied_rationale_long">We need access to your Location to display nearby doctors\n\nPlease go to the Permissions section inside the application Settings and toggle the Location permission switch</string>
    <string name="grant_permission">Grant permission</string>
    <string name="your_next_appointments">Your next appointments</string>
    <string name="adviced_you_to_visit">advised you to visit:</string>
    <!-- Login Page -->
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="notRegisteredYet">Not registered yet ? Click here</string>
    <string name="treated_patients">Treated patients</string>
    <string name="logout">Logout</string>
    <string name="appname">VANJEL</string>
    <string name="profile">Profile</string>
    <string name="next_appointment">Next Appointments</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="search">Search</string>
    <string name="nearby_doctors">Nearby Doctors</string>
    <string name="favorites">Favorites</string>
    <string name="set_availabilities">Set availabilities</string>
    <string name="your_medical_infos">Your Medical Infos</string>
    <string name="recommendations">Recommendations</string>
    <string name="patient">Patient</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name_example_com">name@example.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="city">City</string>
    <string name="postcode">PostCode</string>
    <string name="country">Country</string>
    <string name="enter_new_information">Enter new information</string>
    <string name="personal_appointments">Personal Appointments</string>

    <!-- DoctorPatientInfo -->
    <string name="previous_medical_conditions">Previous medical conditions</string>
    <string name="previous_surgeries_doctor_pt_info">Previous surgeries</string>
    <string name="allergies_doctor_pt_info">Allergies</string>
    <string name="previous_drug_reactions">Previous drug reactions</string>
    <string name="current_medications">Current medications</string>
    <string name="other_substances_doctor_pt_info">Other substances</string>
    <string name="cigarettes_per_day">Cigarettes per day:</string>
    <string name="drinks_per_day_doctor_pt_info">Drinks per day:</string>
    <string name="hours_of_exercises_per_week">Hours of exercises per week:</string>
    <string name="patient_medical_informations"> Patient Medical Informations</string>

    <string name="send_message">Send message</string>
    <string name="send">Send</string>
    <string name="you_don_t_have_any_chats">You don\'t have any chats</string>
    <string name="are_you">Are You ?</string>
    <string name="a_patient">A Patient</string>
    <string name="a_doctor">A Doctor</string>
    <string name="request">Request</string>
    <string name="you_don_t_have_any_requests">You don\'t have any requests</string>
    <string name="you_don_t_have_any_upcoming_appointments">You don\'t have any upcoming appointments</string>
    <string name="doctor_information_last_name">doctor information last name</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="activity">Activity</string>
    <string name="activity1">activity</string>
    <string name="address">Address</string>
    <string name="street1">street</string>
    <string name="streetnumber">streetNumber</string>
    <string name="city1">city</string>
    <string name="country1">country</string>
    <string name="previous_surgeries1">Previous surgeries</string>
    <string name="allergies1">Allergies</string>
    <string name="previous_drug_reactions1">Previous drug reactions</string>
    <string name="drinks_per_day1">Drinks per day:</string>
    <string name="other_substances1">Other substances</string>
    <string name="favorite">Favorite</string>
    <string name="you_don_t_have_any_favorite_doctors">You don\'t have any favorite doctors</string>
    <string name="didn_t_find_any_doctors_with_the_given_criteria">Didn\'t find any doctors with the given criteria</string>
    <string name="you_don_t_have_any_recommendations">You don\'t have any recommendations</string>
    <string name="login_button">login button</string>
    <string name="login">Login</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="select_schedule">Select schedule</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="frequency">Frequency</string>
    <string name="surgery">Surgery</string>
    <string name="next_appointments">Next Appointments</string>
    <string name="you_don_t_have_any_upcoming_cappointments">You don\'t have any upcoming cappointments</string>
    <string name="specialisation">Specialisation</string>
    <string name="you_don_t_have_any_treated_patients">You don\'t have any treated patients</string>
    <string name="day">day</string>
    <string name="from">from</string>
    <string name="accept">accept</string>
    <string name="forward">Forward</string>
    <string name="decline">decline</string>
    <string name="contactname">ContactName</string>
    <string name="time">Time</string>
    <string name="lastmessage">LastMessage</string>
    <string name="dr">Dr. </string>
    <string name="no">No</string>
    <string name="forward_to_this_doctor">Forward to this doctor</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="doctor_1">Doctor 1</string>
    <string name="doctor_2">Doctor 2</string>
    <string name="see_doctor">See Doctor</string>
    <string name="fsbdifugsdiufbisdubfisdubfiusdbifubdsif_sdijf_isdufisdj_fdsfdsf">fsbdifugsdiufbisdubfisdubfiusdbifubdsif sdijf isdufisdj fdsfdsf</string>
    <string name="date_dr_first_last_confirmation">Date -Dr. First Last (confirmation)</string>
    <string name="time_duration_minutes">Time, Duration minutes</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="forwardToAnotherDoctor">Forward to another doctor</string>

</resources>
