<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctorDistanceView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:background="@drawable/background_item"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#D3D3D3"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="6">

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/last_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/activity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/address"
                android:textSize="20sp"
                android:textStyle="italic" />


        </LinearLayout>

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/distance" />
    </LinearLayout>


</RelativeLayout>