<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.ChooseRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/are_you"
            android:textSize="24sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/patientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:drawableBottom="@drawable/patient2"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/a_patient"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:id="@+id/doctorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:drawableBottom="@drawable/stethoscope"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/a_doctor"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>